backend/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ANY
    NOT

Grammar

Rule 0     S' -> init
Rule 1     init -> instrucciones
Rule 2     instrucciones -> instrucciones instruccion
Rule 3     instrucciones -> instruccion
Rule 4     instruccion -> imprimir PTCOMA
Rule 5     instruccion -> declaracion_normal PTCOMA
Rule 6     instruccion -> asignacion_normal PTCOMA
Rule 7     instruccion -> condicional_if PTCOMA
Rule 8     instruccion -> funcion PTCOMA
Rule 9     instruccion -> llamada_funcion PTCOMA
Rule 10    instruccion -> inst_return PTCOMA
Rule 11    instruccion -> inst_break PTCOMA
Rule 12    instruccion -> inst_continue PTCOMA
Rule 13    funcion -> RFUNCTION ID PARI PARD LLAVEIZQ instrucciones LLAVEDER
Rule 14    funcion -> RFUNCTION ID PARI parametros PARD LLAVEIZQ instrucciones LLAVEDER
Rule 15    llamada_funcion -> ID PARI PARD
Rule 16    llamada_funcion -> ID PARI parametros_ll PARD
Rule 17    parametros -> parametros COMA parametro
Rule 18    parametros -> parametro
Rule 19    parametro -> RLET ID DPUNTOS tipo
Rule 20    parametro -> ID DPUNTOS tipo
Rule 21    parametro -> ID
Rule 22    parametros_ll -> parametros_ll COMA parametro_ll
Rule 23    parametros_ll -> parametro_ll
Rule 24    parametro_ll -> expresion
Rule 25    imprimir -> RCONSOLE PUNTO RLOG PARI parametros_ll PARD
Rule 26    declaracion_normal -> RLET ID DPUNTOS tipo IGUAL expresion
Rule 27    declaracion_normal -> RLET ID IGUAL expresion
Rule 28    declaracion_normal -> RLET ID
Rule 29    declaracion_normal -> RLET ID DPUNTOS tipo
Rule 30    asignacion_normal -> ID IGUAL expresion DPUNTOS DPUNTOS tipo
Rule 31    asignacion_normal -> ID IGUAL expresion
Rule 32    inst_return -> RRETURN expresion
Rule 33    inst_return -> RRETURN
Rule 34    inst_break -> RBREAK
Rule 35    inst_continue -> RCONTINUE
Rule 36    condicional_if -> RIF PARI expresion PARD LLAVEIZQ instrucciones LLAVEDER
Rule 37    condicional_if -> RIF PARI expresion PARD LLAVEIZQ instrucciones LLAVEDER condicional_elseifs RELSE LLAVEIZQ instrucciones LLAVEDER
Rule 38    condicional_if -> RIF PARI expresion PARD LLAVEIZQ instrucciones LLAVEDER condicional_elseifs
Rule 39    condicional_if -> RIF PARI expresion PARD LLAVEIZQ instrucciones LLAVEDER RELSE LLAVEIZQ instrucciones LLAVEDER
Rule 40    condicional_elseifs -> condicional_elseifs condicional_elseif
Rule 41    condicional_elseifs -> condicional_elseif
Rule 42    condicional_elseif -> RELSE RIF PARI expresion PARD LLAVEIZQ instrucciones LLAVEDER
Rule 43    ciclo_while -> WHILE PARI expresion PARD LLAVEIZQ instrucciones LLAVEDER
Rule 44    tipo -> STRING
Rule 45    tipo -> NUMBER
Rule 46    tipo -> BOOLEAN
Rule 47    expresion -> expresion MAS expresion
Rule 48    expresion -> expresion MENOS expresion
Rule 49    expresion -> expresion POR expresion
Rule 50    expresion -> expresion DIV expresion
Rule 51    expresion -> expresion POTENCIA expresion
Rule 52    expresion -> expresion PORCENTAJE expresion
Rule 53    expresion -> expresion IGUALIGUAL expresion
Rule 54    expresion -> expresion DIFERENTE expresion
Rule 55    expresion -> expresion MENOR expresion
Rule 56    expresion -> expresion MAYOR expresion
Rule 57    expresion -> expresion MENORIGUAL expresion
Rule 58    expresion -> expresion MAYORIGUAL expresion
Rule 59    expresion -> expresion AND expresion
Rule 60    expresion -> expresion OR expresion
Rule 61    expresion -> MENOS expresion
Rule 62    expresion -> ENTERO
Rule 63    expresion -> DECIMAL
Rule 64    expresion -> CADENA
Rule 65    expresion -> RTRUE
Rule 66    expresion -> RFALSE
Rule 67    expresion -> ID
Rule 68    expresiones_coma -> expresiones_coma COMA expresion
Rule 69    expresiones_coma -> expresion

Terminals, with rules where they appear

AND                  : 59
ANY                  : 
BOOLEAN              : 46
CADENA               : 64
COMA                 : 17 22 68
DECIMAL              : 63
DIFERENTE            : 54
DIV                  : 50
DPUNTOS              : 19 20 26 29 30 30
ENTERO               : 62
ID                   : 13 14 15 16 19 20 21 26 27 28 29 30 31 67
IGUAL                : 26 27 30 31
IGUALIGUAL           : 53
LLAVEDER             : 13 14 36 37 37 38 39 39 42 43
LLAVEIZQ             : 13 14 36 37 37 38 39 39 42 43
MAS                  : 47
MAYOR                : 56
MAYORIGUAL           : 58
MENOR                : 55
MENORIGUAL           : 57
MENOS                : 48 61
NOT                  : 
NUMBER               : 45
OR                   : 60
PARD                 : 13 14 15 16 25 36 37 38 39 42 43
PARI                 : 13 14 15 16 25 36 37 38 39 42 43
POR                  : 49
PORCENTAJE           : 52
POTENCIA             : 51
PTCOMA               : 4 5 6 7 8 9 10 11 12
PUNTO                : 25
RBREAK               : 34
RCONSOLE             : 25
RCONTINUE            : 35
RELSE                : 37 39 42
RFALSE               : 66
RFUNCTION            : 13 14
RIF                  : 36 37 38 39 42
RLET                 : 19 26 27 28 29
RLOG                 : 25
RRETURN              : 32 33
RTRUE                : 65
STRING               : 44
WHILE                : 43
error                : 

Nonterminals, with rules where they appear

asignacion_normal    : 6
ciclo_while          : 
condicional_elseif   : 40 41
condicional_elseifs  : 37 38 40
condicional_if       : 7
declaracion_normal   : 5
expresion            : 24 26 27 30 31 32 36 37 38 39 42 43 47 47 48 48 49 49 50 50 51 51 52 52 53 53 54 54 55 55 56 56 57 57 58 58 59 59 60 60 61 68 69
expresiones_coma     : 68
funcion              : 8
imprimir             : 4
init                 : 0
inst_break           : 11
inst_continue        : 12
inst_return          : 10
instruccion          : 2 3
instrucciones        : 1 2 13 14 36 37 37 38 39 39 42 43
llamada_funcion      : 9
parametro            : 17 18
parametro_ll         : 22 23
parametros           : 14 17
parametros_ll        : 16 22 25
tipo                 : 19 20 26 29 30

Parsing method: LALR

state 0

    (0) S' -> . init
    (1) init -> . instrucciones
    (2) instrucciones -> . instrucciones instruccion
    (3) instrucciones -> . instruccion
    (4) instruccion -> . imprimir PTCOMA
    (5) instruccion -> . declaracion_normal PTCOMA
    (6) instruccion -> . asignacion_normal PTCOMA
    (7) instruccion -> . condicional_if PTCOMA
    (8) instruccion -> . funcion PTCOMA
    (9) instruccion -> . llamada_funcion PTCOMA
    (10) instruccion -> . inst_return PTCOMA
    (11) instruccion -> . inst_break PTCOMA
    (12) instruccion -> . inst_continue PTCOMA
    (25) imprimir -> . RCONSOLE PUNTO RLOG PARI parametros_ll PARD
    (26) declaracion_normal -> . RLET ID DPUNTOS tipo IGUAL expresion
    (27) declaracion_normal -> . RLET ID IGUAL expresion
    (28) declaracion_normal -> . RLET ID
    (29) declaracion_normal -> . RLET ID DPUNTOS tipo
    (30) asignacion_normal -> . ID IGUAL expresion DPUNTOS DPUNTOS tipo
    (31) asignacion_normal -> . ID IGUAL expresion
    (36) condicional_if -> . RIF PARI expresion PARD LLAVEIZQ instrucciones LLAVEDER
    (37) condicional_if -> . RIF PARI expresion PARD LLAVEIZQ instrucciones LLAVEDER condicional_elseifs RELSE LLAVEIZQ instrucciones LLAVEDER
    (38) condicional_if -> . RIF PARI expresion PARD LLAVEIZQ instrucciones LLAVEDER condicional_elseifs
    (39) condicional_if -> . RIF PARI expresion PARD LLAVEIZQ instrucciones LLAVEDER RELSE LLAVEIZQ instrucciones LLAVEDER
    (13) funcion -> . RFUNCTION ID PARI PARD LLAVEIZQ instrucciones LLAVEDER
    (14) funcion -> . RFUNCTION ID PARI parametros PARD LLAVEIZQ instrucciones LLAVEDER
    (15) llamada_funcion -> . ID PARI PARD
    (16) llamada_funcion -> . ID PARI parametros_ll PARD
    (32) inst_return -> . RRETURN expresion
    (33) inst_return -> . RRETURN
    (34) inst_break -> . RBREAK
    (35) inst_continue -> . RCONTINUE

    RCONSOLE        shift and go to state 13
    RLET            shift and go to state 14
    ID              shift and go to state 15
    RIF             shift and go to state 16
    RFUNCTION       shift and go to state 17
    RRETURN         shift and go to state 18
    RBREAK          shift and go to state 19
    RCONTINUE       shift and go to state 20

    init                           shift and go to state 1
    instrucciones                  shift and go to state 2
    instruccion                    shift and go to state 3
    imprimir                       shift and go to state 4
    declaracion_normal             shift and go to state 5
    asignacion_normal              shift and go to state 6
    condicional_if                 shift and go to state 7
    funcion                        shift and go to state 8
    llamada_funcion                shift and go to state 9
    inst_return                    shift and go to state 10
    inst_break                     shift and go to state 11
    inst_continue                  shift and go to state 12

state 1

    (0) S' -> init .



state 2

    (1) init -> instrucciones .
    (2) instrucciones -> instrucciones . instruccion
    (4) instruccion -> . imprimir PTCOMA
    (5) instruccion -> . declaracion_normal PTCOMA
    (6) instruccion -> . asignacion_normal PTCOMA
    (7) instruccion -> . condicional_if PTCOMA
    (8) instruccion -> . funcion PTCOMA
    (9) instruccion -> . llamada_funcion PTCOMA
    (10) instruccion -> . inst_return PTCOMA
    (11) instruccion -> . inst_break PTCOMA
    (12) instruccion -> . inst_continue PTCOMA
    (25) imprimir -> . RCONSOLE PUNTO RLOG PARI parametros_ll PARD
    (26) declaracion_normal -> . RLET ID DPUNTOS tipo IGUAL expresion
    (27) declaracion_normal -> . RLET ID IGUAL expresion
    (28) declaracion_normal -> . RLET ID
    (29) declaracion_normal -> . RLET ID DPUNTOS tipo
    (30) asignacion_normal -> . ID IGUAL expresion DPUNTOS DPUNTOS tipo
    (31) asignacion_normal -> . ID IGUAL expresion
    (36) condicional_if -> . RIF PARI expresion PARD LLAVEIZQ instrucciones LLAVEDER
    (37) condicional_if -> . RIF PARI expresion PARD LLAVEIZQ instrucciones LLAVEDER condicional_elseifs RELSE LLAVEIZQ instrucciones LLAVEDER
    (38) condicional_if -> . RIF PARI expresion PARD LLAVEIZQ instrucciones LLAVEDER condicional_elseifs
    (39) condicional_if -> . RIF PARI expresion PARD LLAVEIZQ instrucciones LLAVEDER RELSE LLAVEIZQ instrucciones LLAVEDER
    (13) funcion -> . RFUNCTION ID PARI PARD LLAVEIZQ instrucciones LLAVEDER
    (14) funcion -> . RFUNCTION ID PARI parametros PARD LLAVEIZQ instrucciones LLAVEDER
    (15) llamada_funcion -> . ID PARI PARD
    (16) llamada_funcion -> . ID PARI parametros_ll PARD
    (32) inst_return -> . RRETURN expresion
    (33) inst_return -> . RRETURN
    (34) inst_break -> . RBREAK
    (35) inst_continue -> . RCONTINUE

    $end            reduce using rule 1 (init -> instrucciones .)
    RCONSOLE        shift and go to state 13
    RLET            shift and go to state 14
    ID              shift and go to state 15
    RIF             shift and go to state 16
    RFUNCTION       shift and go to state 17
    RRETURN         shift and go to state 18
    RBREAK          shift and go to state 19
    RCONTINUE       shift and go to state 20

    instruccion                    shift and go to state 21
    imprimir                       shift and go to state 4
    declaracion_normal             shift and go to state 5
    asignacion_normal              shift and go to state 6
    condicional_if                 shift and go to state 7
    funcion                        shift and go to state 8
    llamada_funcion                shift and go to state 9
    inst_return                    shift and go to state 10
    inst_break                     shift and go to state 11
    inst_continue                  shift and go to state 12

state 3

    (3) instrucciones -> instruccion .

    RCONSOLE        reduce using rule 3 (instrucciones -> instruccion .)
    RLET            reduce using rule 3 (instrucciones -> instruccion .)
    ID              reduce using rule 3 (instrucciones -> instruccion .)
    RIF             reduce using rule 3 (instrucciones -> instruccion .)
    RFUNCTION       reduce using rule 3 (instrucciones -> instruccion .)
    RRETURN         reduce using rule 3 (instrucciones -> instruccion .)
    RBREAK          reduce using rule 3 (instrucciones -> instruccion .)
    RCONTINUE       reduce using rule 3 (instrucciones -> instruccion .)
    $end            reduce using rule 3 (instrucciones -> instruccion .)
    LLAVEDER        reduce using rule 3 (instrucciones -> instruccion .)


state 4

    (4) instruccion -> imprimir . PTCOMA

    PTCOMA          shift and go to state 22


state 5

    (5) instruccion -> declaracion_normal . PTCOMA

    PTCOMA          shift and go to state 23


state 6

    (6) instruccion -> asignacion_normal . PTCOMA

    PTCOMA          shift and go to state 24


state 7

    (7) instruccion -> condicional_if . PTCOMA

    PTCOMA          shift and go to state 25


state 8

    (8) instruccion -> funcion . PTCOMA

    PTCOMA          shift and go to state 26


state 9

    (9) instruccion -> llamada_funcion . PTCOMA

    PTCOMA          shift and go to state 27


state 10

    (10) instruccion -> inst_return . PTCOMA

    PTCOMA          shift and go to state 28


state 11

    (11) instruccion -> inst_break . PTCOMA

    PTCOMA          shift and go to state 29


state 12

    (12) instruccion -> inst_continue . PTCOMA

    PTCOMA          shift and go to state 30


state 13

    (25) imprimir -> RCONSOLE . PUNTO RLOG PARI parametros_ll PARD

    PUNTO           shift and go to state 31


state 14

    (26) declaracion_normal -> RLET . ID DPUNTOS tipo IGUAL expresion
    (27) declaracion_normal -> RLET . ID IGUAL expresion
    (28) declaracion_normal -> RLET . ID
    (29) declaracion_normal -> RLET . ID DPUNTOS tipo

    ID              shift and go to state 32


state 15

    (30) asignacion_normal -> ID . IGUAL expresion DPUNTOS DPUNTOS tipo
    (31) asignacion_normal -> ID . IGUAL expresion
    (15) llamada_funcion -> ID . PARI PARD
    (16) llamada_funcion -> ID . PARI parametros_ll PARD

    IGUAL           shift and go to state 33
    PARI            shift and go to state 34


state 16

    (36) condicional_if -> RIF . PARI expresion PARD LLAVEIZQ instrucciones LLAVEDER
    (37) condicional_if -> RIF . PARI expresion PARD LLAVEIZQ instrucciones LLAVEDER condicional_elseifs RELSE LLAVEIZQ instrucciones LLAVEDER
    (38) condicional_if -> RIF . PARI expresion PARD LLAVEIZQ instrucciones LLAVEDER condicional_elseifs
    (39) condicional_if -> RIF . PARI expresion PARD LLAVEIZQ instrucciones LLAVEDER RELSE LLAVEIZQ instrucciones LLAVEDER

    PARI            shift and go to state 35


state 17

    (13) funcion -> RFUNCTION . ID PARI PARD LLAVEIZQ instrucciones LLAVEDER
    (14) funcion -> RFUNCTION . ID PARI parametros PARD LLAVEIZQ instrucciones LLAVEDER

    ID              shift and go to state 36


state 18

    (32) inst_return -> RRETURN . expresion
    (33) inst_return -> RRETURN .
    (47) expresion -> . expresion MAS expresion
    (48) expresion -> . expresion MENOS expresion
    (49) expresion -> . expresion POR expresion
    (50) expresion -> . expresion DIV expresion
    (51) expresion -> . expresion POTENCIA expresion
    (52) expresion -> . expresion PORCENTAJE expresion
    (53) expresion -> . expresion IGUALIGUAL expresion
    (54) expresion -> . expresion DIFERENTE expresion
    (55) expresion -> . expresion MENOR expresion
    (56) expresion -> . expresion MAYOR expresion
    (57) expresion -> . expresion MENORIGUAL expresion
    (58) expresion -> . expresion MAYORIGUAL expresion
    (59) expresion -> . expresion AND expresion
    (60) expresion -> . expresion OR expresion
    (61) expresion -> . MENOS expresion
    (62) expresion -> . ENTERO
    (63) expresion -> . DECIMAL
    (64) expresion -> . CADENA
    (65) expresion -> . RTRUE
    (66) expresion -> . RFALSE
    (67) expresion -> . ID

    PTCOMA          reduce using rule 33 (inst_return -> RRETURN .)
    MENOS           shift and go to state 38
    ENTERO          shift and go to state 39
    DECIMAL         shift and go to state 40
    CADENA          shift and go to state 41
    RTRUE           shift and go to state 42
    RFALSE          shift and go to state 43
    ID              shift and go to state 44

    expresion                      shift and go to state 37

state 19

    (34) inst_break -> RBREAK .

    PTCOMA          reduce using rule 34 (inst_break -> RBREAK .)


state 20

    (35) inst_continue -> RCONTINUE .

    PTCOMA          reduce using rule 35 (inst_continue -> RCONTINUE .)


state 21

    (2) instrucciones -> instrucciones instruccion .

    RCONSOLE        reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    RLET            reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    ID              reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    RIF             reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    RFUNCTION       reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    RRETURN         reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    RBREAK          reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    RCONTINUE       reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    $end            reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    LLAVEDER        reduce using rule 2 (instrucciones -> instrucciones instruccion .)


state 22

    (4) instruccion -> imprimir PTCOMA .

    RCONSOLE        reduce using rule 4 (instruccion -> imprimir PTCOMA .)
    RLET            reduce using rule 4 (instruccion -> imprimir PTCOMA .)
    ID              reduce using rule 4 (instruccion -> imprimir PTCOMA .)
    RIF             reduce using rule 4 (instruccion -> imprimir PTCOMA .)
    RFUNCTION       reduce using rule 4 (instruccion -> imprimir PTCOMA .)
    RRETURN         reduce using rule 4 (instruccion -> imprimir PTCOMA .)
    RBREAK          reduce using rule 4 (instruccion -> imprimir PTCOMA .)
    RCONTINUE       reduce using rule 4 (instruccion -> imprimir PTCOMA .)
    $end            reduce using rule 4 (instruccion -> imprimir PTCOMA .)
    LLAVEDER        reduce using rule 4 (instruccion -> imprimir PTCOMA .)


state 23

    (5) instruccion -> declaracion_normal PTCOMA .

    RCONSOLE        reduce using rule 5 (instruccion -> declaracion_normal PTCOMA .)
    RLET            reduce using rule 5 (instruccion -> declaracion_normal PTCOMA .)
    ID              reduce using rule 5 (instruccion -> declaracion_normal PTCOMA .)
    RIF             reduce using rule 5 (instruccion -> declaracion_normal PTCOMA .)
    RFUNCTION       reduce using rule 5 (instruccion -> declaracion_normal PTCOMA .)
    RRETURN         reduce using rule 5 (instruccion -> declaracion_normal PTCOMA .)
    RBREAK          reduce using rule 5 (instruccion -> declaracion_normal PTCOMA .)
    RCONTINUE       reduce using rule 5 (instruccion -> declaracion_normal PTCOMA .)
    $end            reduce using rule 5 (instruccion -> declaracion_normal PTCOMA .)
    LLAVEDER        reduce using rule 5 (instruccion -> declaracion_normal PTCOMA .)


state 24

    (6) instruccion -> asignacion_normal PTCOMA .

    RCONSOLE        reduce using rule 6 (instruccion -> asignacion_normal PTCOMA .)
    RLET            reduce using rule 6 (instruccion -> asignacion_normal PTCOMA .)
    ID              reduce using rule 6 (instruccion -> asignacion_normal PTCOMA .)
    RIF             reduce using rule 6 (instruccion -> asignacion_normal PTCOMA .)
    RFUNCTION       reduce using rule 6 (instruccion -> asignacion_normal PTCOMA .)
    RRETURN         reduce using rule 6 (instruccion -> asignacion_normal PTCOMA .)
    RBREAK          reduce using rule 6 (instruccion -> asignacion_normal PTCOMA .)
    RCONTINUE       reduce using rule 6 (instruccion -> asignacion_normal PTCOMA .)
    $end            reduce using rule 6 (instruccion -> asignacion_normal PTCOMA .)
    LLAVEDER        reduce using rule 6 (instruccion -> asignacion_normal PTCOMA .)


state 25

    (7) instruccion -> condicional_if PTCOMA .

    RCONSOLE        reduce using rule 7 (instruccion -> condicional_if PTCOMA .)
    RLET            reduce using rule 7 (instruccion -> condicional_if PTCOMA .)
    ID              reduce using rule 7 (instruccion -> condicional_if PTCOMA .)
    RIF             reduce using rule 7 (instruccion -> condicional_if PTCOMA .)
    RFUNCTION       reduce using rule 7 (instruccion -> condicional_if PTCOMA .)
    RRETURN         reduce using rule 7 (instruccion -> condicional_if PTCOMA .)
    RBREAK          reduce using rule 7 (instruccion -> condicional_if PTCOMA .)
    RCONTINUE       reduce using rule 7 (instruccion -> condicional_if PTCOMA .)
    $end            reduce using rule 7 (instruccion -> condicional_if PTCOMA .)
    LLAVEDER        reduce using rule 7 (instruccion -> condicional_if PTCOMA .)


state 26

    (8) instruccion -> funcion PTCOMA .

    RCONSOLE        reduce using rule 8 (instruccion -> funcion PTCOMA .)
    RLET            reduce using rule 8 (instruccion -> funcion PTCOMA .)
    ID              reduce using rule 8 (instruccion -> funcion PTCOMA .)
    RIF             reduce using rule 8 (instruccion -> funcion PTCOMA .)
    RFUNCTION       reduce using rule 8 (instruccion -> funcion PTCOMA .)
    RRETURN         reduce using rule 8 (instruccion -> funcion PTCOMA .)
    RBREAK          reduce using rule 8 (instruccion -> funcion PTCOMA .)
    RCONTINUE       reduce using rule 8 (instruccion -> funcion PTCOMA .)
    $end            reduce using rule 8 (instruccion -> funcion PTCOMA .)
    LLAVEDER        reduce using rule 8 (instruccion -> funcion PTCOMA .)


state 27

    (9) instruccion -> llamada_funcion PTCOMA .

    RCONSOLE        reduce using rule 9 (instruccion -> llamada_funcion PTCOMA .)
    RLET            reduce using rule 9 (instruccion -> llamada_funcion PTCOMA .)
    ID              reduce using rule 9 (instruccion -> llamada_funcion PTCOMA .)
    RIF             reduce using rule 9 (instruccion -> llamada_funcion PTCOMA .)
    RFUNCTION       reduce using rule 9 (instruccion -> llamada_funcion PTCOMA .)
    RRETURN         reduce using rule 9 (instruccion -> llamada_funcion PTCOMA .)
    RBREAK          reduce using rule 9 (instruccion -> llamada_funcion PTCOMA .)
    RCONTINUE       reduce using rule 9 (instruccion -> llamada_funcion PTCOMA .)
    $end            reduce using rule 9 (instruccion -> llamada_funcion PTCOMA .)
    LLAVEDER        reduce using rule 9 (instruccion -> llamada_funcion PTCOMA .)


state 28

    (10) instruccion -> inst_return PTCOMA .

    RCONSOLE        reduce using rule 10 (instruccion -> inst_return PTCOMA .)
    RLET            reduce using rule 10 (instruccion -> inst_return PTCOMA .)
    ID              reduce using rule 10 (instruccion -> inst_return PTCOMA .)
    RIF             reduce using rule 10 (instruccion -> inst_return PTCOMA .)
    RFUNCTION       reduce using rule 10 (instruccion -> inst_return PTCOMA .)
    RRETURN         reduce using rule 10 (instruccion -> inst_return PTCOMA .)
    RBREAK          reduce using rule 10 (instruccion -> inst_return PTCOMA .)
    RCONTINUE       reduce using rule 10 (instruccion -> inst_return PTCOMA .)
    $end            reduce using rule 10 (instruccion -> inst_return PTCOMA .)
    LLAVEDER        reduce using rule 10 (instruccion -> inst_return PTCOMA .)


state 29

    (11) instruccion -> inst_break PTCOMA .

    RCONSOLE        reduce using rule 11 (instruccion -> inst_break PTCOMA .)
    RLET            reduce using rule 11 (instruccion -> inst_break PTCOMA .)
    ID              reduce using rule 11 (instruccion -> inst_break PTCOMA .)
    RIF             reduce using rule 11 (instruccion -> inst_break PTCOMA .)
    RFUNCTION       reduce using rule 11 (instruccion -> inst_break PTCOMA .)
    RRETURN         reduce using rule 11 (instruccion -> inst_break PTCOMA .)
    RBREAK          reduce using rule 11 (instruccion -> inst_break PTCOMA .)
    RCONTINUE       reduce using rule 11 (instruccion -> inst_break PTCOMA .)
    $end            reduce using rule 11 (instruccion -> inst_break PTCOMA .)
    LLAVEDER        reduce using rule 11 (instruccion -> inst_break PTCOMA .)


state 30

    (12) instruccion -> inst_continue PTCOMA .

    RCONSOLE        reduce using rule 12 (instruccion -> inst_continue PTCOMA .)
    RLET            reduce using rule 12 (instruccion -> inst_continue PTCOMA .)
    ID              reduce using rule 12 (instruccion -> inst_continue PTCOMA .)
    RIF             reduce using rule 12 (instruccion -> inst_continue PTCOMA .)
    RFUNCTION       reduce using rule 12 (instruccion -> inst_continue PTCOMA .)
    RRETURN         reduce using rule 12 (instruccion -> inst_continue PTCOMA .)
    RBREAK          reduce using rule 12 (instruccion -> inst_continue PTCOMA .)
    RCONTINUE       reduce using rule 12 (instruccion -> inst_continue PTCOMA .)
    $end            reduce using rule 12 (instruccion -> inst_continue PTCOMA .)
    LLAVEDER        reduce using rule 12 (instruccion -> inst_continue PTCOMA .)


state 31

    (25) imprimir -> RCONSOLE PUNTO . RLOG PARI parametros_ll PARD

    RLOG            shift and go to state 45


state 32

    (26) declaracion_normal -> RLET ID . DPUNTOS tipo IGUAL expresion
    (27) declaracion_normal -> RLET ID . IGUAL expresion
    (28) declaracion_normal -> RLET ID .
    (29) declaracion_normal -> RLET ID . DPUNTOS tipo

    DPUNTOS         shift and go to state 46
    IGUAL           shift and go to state 47
    PTCOMA          reduce using rule 28 (declaracion_normal -> RLET ID .)


state 33

    (30) asignacion_normal -> ID IGUAL . expresion DPUNTOS DPUNTOS tipo
    (31) asignacion_normal -> ID IGUAL . expresion
    (47) expresion -> . expresion MAS expresion
    (48) expresion -> . expresion MENOS expresion
    (49) expresion -> . expresion POR expresion
    (50) expresion -> . expresion DIV expresion
    (51) expresion -> . expresion POTENCIA expresion
    (52) expresion -> . expresion PORCENTAJE expresion
    (53) expresion -> . expresion IGUALIGUAL expresion
    (54) expresion -> . expresion DIFERENTE expresion
    (55) expresion -> . expresion MENOR expresion
    (56) expresion -> . expresion MAYOR expresion
    (57) expresion -> . expresion MENORIGUAL expresion
    (58) expresion -> . expresion MAYORIGUAL expresion
    (59) expresion -> . expresion AND expresion
    (60) expresion -> . expresion OR expresion
    (61) expresion -> . MENOS expresion
    (62) expresion -> . ENTERO
    (63) expresion -> . DECIMAL
    (64) expresion -> . CADENA
    (65) expresion -> . RTRUE
    (66) expresion -> . RFALSE
    (67) expresion -> . ID

    MENOS           shift and go to state 38
    ENTERO          shift and go to state 39
    DECIMAL         shift and go to state 40
    CADENA          shift and go to state 41
    RTRUE           shift and go to state 42
    RFALSE          shift and go to state 43
    ID              shift and go to state 44

    expresion                      shift and go to state 48

state 34

    (15) llamada_funcion -> ID PARI . PARD
    (16) llamada_funcion -> ID PARI . parametros_ll PARD
    (22) parametros_ll -> . parametros_ll COMA parametro_ll
    (23) parametros_ll -> . parametro_ll
    (24) parametro_ll -> . expresion
    (47) expresion -> . expresion MAS expresion
    (48) expresion -> . expresion MENOS expresion
    (49) expresion -> . expresion POR expresion
    (50) expresion -> . expresion DIV expresion
    (51) expresion -> . expresion POTENCIA expresion
    (52) expresion -> . expresion PORCENTAJE expresion
    (53) expresion -> . expresion IGUALIGUAL expresion
    (54) expresion -> . expresion DIFERENTE expresion
    (55) expresion -> . expresion MENOR expresion
    (56) expresion -> . expresion MAYOR expresion
    (57) expresion -> . expresion MENORIGUAL expresion
    (58) expresion -> . expresion MAYORIGUAL expresion
    (59) expresion -> . expresion AND expresion
    (60) expresion -> . expresion OR expresion
    (61) expresion -> . MENOS expresion
    (62) expresion -> . ENTERO
    (63) expresion -> . DECIMAL
    (64) expresion -> . CADENA
    (65) expresion -> . RTRUE
    (66) expresion -> . RFALSE
    (67) expresion -> . ID

    PARD            shift and go to state 49
    MENOS           shift and go to state 38
    ENTERO          shift and go to state 39
    DECIMAL         shift and go to state 40
    CADENA          shift and go to state 41
    RTRUE           shift and go to state 42
    RFALSE          shift and go to state 43
    ID              shift and go to state 44

    parametros_ll                  shift and go to state 50
    parametro_ll                   shift and go to state 51
    expresion                      shift and go to state 52

state 35

    (36) condicional_if -> RIF PARI . expresion PARD LLAVEIZQ instrucciones LLAVEDER
    (37) condicional_if -> RIF PARI . expresion PARD LLAVEIZQ instrucciones LLAVEDER condicional_elseifs RELSE LLAVEIZQ instrucciones LLAVEDER
    (38) condicional_if -> RIF PARI . expresion PARD LLAVEIZQ instrucciones LLAVEDER condicional_elseifs
    (39) condicional_if -> RIF PARI . expresion PARD LLAVEIZQ instrucciones LLAVEDER RELSE LLAVEIZQ instrucciones LLAVEDER
    (47) expresion -> . expresion MAS expresion
    (48) expresion -> . expresion MENOS expresion
    (49) expresion -> . expresion POR expresion
    (50) expresion -> . expresion DIV expresion
    (51) expresion -> . expresion POTENCIA expresion
    (52) expresion -> . expresion PORCENTAJE expresion
    (53) expresion -> . expresion IGUALIGUAL expresion
    (54) expresion -> . expresion DIFERENTE expresion
    (55) expresion -> . expresion MENOR expresion
    (56) expresion -> . expresion MAYOR expresion
    (57) expresion -> . expresion MENORIGUAL expresion
    (58) expresion -> . expresion MAYORIGUAL expresion
    (59) expresion -> . expresion AND expresion
    (60) expresion -> . expresion OR expresion
    (61) expresion -> . MENOS expresion
    (62) expresion -> . ENTERO
    (63) expresion -> . DECIMAL
    (64) expresion -> . CADENA
    (65) expresion -> . RTRUE
    (66) expresion -> . RFALSE
    (67) expresion -> . ID

    MENOS           shift and go to state 38
    ENTERO          shift and go to state 39
    DECIMAL         shift and go to state 40
    CADENA          shift and go to state 41
    RTRUE           shift and go to state 42
    RFALSE          shift and go to state 43
    ID              shift and go to state 44

    expresion                      shift and go to state 53

state 36

    (13) funcion -> RFUNCTION ID . PARI PARD LLAVEIZQ instrucciones LLAVEDER
    (14) funcion -> RFUNCTION ID . PARI parametros PARD LLAVEIZQ instrucciones LLAVEDER

    PARI            shift and go to state 54


state 37

    (32) inst_return -> RRETURN expresion .
    (47) expresion -> expresion . MAS expresion
    (48) expresion -> expresion . MENOS expresion
    (49) expresion -> expresion . POR expresion
    (50) expresion -> expresion . DIV expresion
    (51) expresion -> expresion . POTENCIA expresion
    (52) expresion -> expresion . PORCENTAJE expresion
    (53) expresion -> expresion . IGUALIGUAL expresion
    (54) expresion -> expresion . DIFERENTE expresion
    (55) expresion -> expresion . MENOR expresion
    (56) expresion -> expresion . MAYOR expresion
    (57) expresion -> expresion . MENORIGUAL expresion
    (58) expresion -> expresion . MAYORIGUAL expresion
    (59) expresion -> expresion . AND expresion
    (60) expresion -> expresion . OR expresion

    PTCOMA          reduce using rule 32 (inst_return -> RRETURN expresion .)
    MAS             shift and go to state 55
    MENOS           shift and go to state 56
    POR             shift and go to state 57
    DIV             shift and go to state 58
    POTENCIA        shift and go to state 59
    PORCENTAJE      shift and go to state 60
    IGUALIGUAL      shift and go to state 61
    DIFERENTE       shift and go to state 62
    MENOR           shift and go to state 63
    MAYOR           shift and go to state 64
    MENORIGUAL      shift and go to state 65
    MAYORIGUAL      shift and go to state 66
    AND             shift and go to state 67
    OR              shift and go to state 68


state 38
